# Snow_HaloBaseStation

./: CMakeLists.txt  README.md  prj.conf  xiao_ble.overlay  xiao_ble_sense.overlay
SENSE_BUILD/: .ninja_deps  .ninja_log  .vscode-nrf-connect.json  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  image_preload.cmake
SENSE_BUILD/zephyr/: .cmake.dotconfig.checksum  .config  (+15 more)
XIAO_BUILD/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  image_preload.cmake
XIAO_REGULAR/: .ninja_deps  .ninja_log  .vscode-nrf-connect.json  CMakeCache.txt  Snow_HaloBaseStation_sysbuild_cache.txt  build.ninja  build_info.yml  build_info.yml.bak  cmake_install.cmake  compile_commands.json  domains.yaml  image_preload.cmake  merged.hex
XIAO_SENSE/: .ninja_log  .vscode-nrf-connect.json  CMakeCache.txt  Snow_HaloBaseStation_sysbuild_cache.txt  build.ninja  build_info.yml  build_info.yml.bak  cmake_install.cmake  domains.yaml  merged.hex  partitions.yml  pm.config
sense_build/: .ninja_deps  .ninja_log  .vscode-nrf-connect.json  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  image_preload.cmake
src/: GPS.c  GPS.h  IMU.c  IMU.h  UART.c  UART.h  UART_bt_control.c  UART_bt_control.h  adc_control.c  adc_control.h  bluetooth_control.c  bluetooth_control.h  boot_bt_connect.c  boot_bt_connect.h  button_control.c  button_control.h  iphone_bt_connect.c  iphone_bt_connect.h  led_control.c  led_control.h  left_boot_operation.c  left_boot_operation.h  main.c  right_boot_operation.c  right_boot_operation.h
(+586 files in other folders)
